--- a/MyApplication/app/build.gradle
+++ b/MyApplication/app/build.gradle
@@ -38,4 +38,7 @@ dependencies {
 
     implementation "com.google.android.material:material:$material_version"
 
+    implementation "android.arch.navigation:navigation-fragment-ktx:$navigationVersion"
+    implementation "android.arch.navigation:navigation-ui-ktx:$navigationVersion"
+
 }
