--- a/MyApplication/build.gradle
+++ b/MyApplication/build.gradle
@@ -4,6 +4,7 @@ buildscript {
     ext {
         kotlin_version = '1.3.61'
         material_version = '1.2.0-alpha04'
+        navigationVersion = '1.0.0'
     }
     repositories {
         google()
