--- a/MyApplication/build.gradle
+++ b/MyApplication/build.gradle
@@ -5,6 +5,11 @@ buildscript {
         kotlin_version = '1.3.61'
         material_version = '1.2.0-alpha04'
         navigationVersion = '1.0.0'
+        roomVersion = "2.2.3"
+        archLifecycleVersion = "2.1.0"
+        androidxArchVersion = "2.1.0"
+        coroutines = "1.3.3"
+        coreTestingVersion = "2.1.0"
     }
     repositories {
         google()
