--- a/TodoApplication/build.gradle
+++ b/TodoApplication/build.gradle
@@ -5,6 +5,9 @@ buildscript {
         kotlin_version = '1.3.61'
         material_version = '1.2.0-alpha04'
         room_version = '2.2.3'
+        coroutines_version = '1.3.3'
+        lifecycle_version = '2.2.0'
+        arch_version = '2.1.0'
     }
     repositories {
         google()
